# web-tech

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/tests/: sample.test.tsx
infrastructure/: main.tf
