[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.1.0",
    "djhtml>=3.0.1",
    "mypy>=1.0.1",
    "flake8>=6.0.0",
    "bandit>=1.7.4",
    "vulture>=2.7",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.20.3",
]
[tool.black]
target-version = ["py310"]
[tool.isort]
profile = "black"

[tool.vulture]
min_confidence = 100

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.pdm.scripts]
format-black = "black src/ tests/"
format-djhtml = "djhtml src/backend/templates -t 2 --in-place"
format-isort = "isort src tests"
format = {composite = ["format-black", "format-djhtml", "format-isort"]}
lint-bandit = "bandit -r src/"
lint-black = "black --check --diff src/ tests/"
lint-djhtml = "djhtml src/backend/templates -t 2 --check"
lint-flake8 = "flake8 src/ tests/"
lint-isort = "isort --check --diff src tests"
lint-mypy = "mypy src/backend tests"
lint-vulture = "vulture src"
lint = {composite = ["lint-bandit", "lint-black", "lint-djhtml", "lint-flake8", "lint-isort", "lint-mypy", "lint-vulture"]}
test = "pytest tests/"


[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ola Ajibode", email = "ola.ajibode@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
